--- a/ShoppingApp/ShoppingApp/Servicios.xaml
+++ b/ShoppingApp/ShoppingApp/Servicios.xaml
@@ -20,16 +20,32 @@
 
         <Image Grid.ColumnSpan="2" Grid.Row="0" Source="https://www.grupociadetalentos.com/falabella/img/logos-grupo.jpg" />
 
-        <StackLayout Grid.ColumnSpan="2" Grid.Row="1" Orientation="Horizontal" >
-            <StackLayout Orientation="Vertical">
-                <Image Source="https://imagenes.elpais.com/resizer/nFG2xVqzfpKo448-tCn8XFYe05s=/1960x1470/cloudfront-eu-central-1.images.arcpublishing.com/prisa/DARNPDRM5NJ2CKNRMCEYGRVJMA.jpg" HeightRequest="130" />
-                <Label Text="Sastreria" TextColor="Black" FontSize="20" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
-            </StackLayout>
-            <StackLayout Orientation="Vertical">
-                <Image Source="https://sotesa.com/wp-content/uploads/2017/01/43608476_m.jpg" HeightRequest="130" />
-                <Label Text="Servicio Tecnico" TextColor="Black" FontSize="20" FontAttributes="Bold" HorizontalTextAlignment="Center" />
-            </StackLayout>
-        </StackLayout>
+        <ScrollView Orientation="Horizontal" Grid.ColumnSpan="2" Grid.Row="1" >
+            <Grid >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="200" />
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width=".33*"/>
+                    <ColumnDefinition Width=".33*"/>
+                    <ColumnDefinition Width=".33*"/>
+                </Grid.ColumnDefinitions>
+
+
+
+                <Image  Grid.Column="0" Grid.Row="0" Source="https://media.gq.com.mx/photos/5ceb7b57d09b9a7825168ff5/16:9/pass/GettyImages-962559116.jpg" />
+                <Button Grid.Column="0" Grid.Row="0" Text="Sastreria" FontSize="20" HorizontalOptions="Center" CornerRadius="50" TextColor="White" FontAttributes="Bold" BackgroundColor="Gray" Opacity=".8" VerticalOptions="Center" />
+
+                <Image Grid.Column="1" Grid.Row="0" Source="https://sotein.com.co/wp-content/uploads/2021/05/Mantenimiento-de-computadores-1.jpg" />
+                <Button Grid.Column="1" Grid.Row="0" Text="Serv. Tecnico" FontSize="20"  HorizontalOptions="Center" CornerRadius="50" TextColor="White" FontAttributes="Bold" BackgroundColor="Gray" Opacity=".8" VerticalOptions="Center" />
+
+                <Image Grid.Column="2" Grid.Row="0" Source="https://images.falabella.com/v3/assets/blt7c5c2f2f888a7cc3/blte716f45ffacd8ecb/62265e54f603d566e798f7fb/ayuda-falabella-devolver-producto-dk-evp.png" BackgroundColor="LightGray"/>
+                <Button Grid.Column="2" Grid.Row="0" Text="Atencion al Cliente" FontSize="20"  HorizontalOptions="Center" CornerRadius="50" TextColor="White" FontAttributes="Bold" BackgroundColor="Gray" Opacity=".8" VerticalOptions="Center" />
+
+            </Grid>
+        </ScrollView>
         <StackLayout Orientation="Vertical"  Grid.ColumnSpan="2" Grid.Row="2" HorizontalOptions="Center">
             <StackLayout Orientation="Horizontal" Spacing="40">
                 <Label Text="Horario:" TextColor="Black" FontSize="18" VerticalTextAlignment="Center"/>
@@ -48,5 +64,6 @@
                 <Label Text="+51 698 963 987" TextColor="Black" FontSize="18" VerticalTextAlignment="End"/>
             </StackLayout>
         </StackLayout>
+        <Label  Grid.ColumnSpan="2" Grid.Row="10" Text="CREADOR: KLEIBERT MEDINA" FontSize="12" TextColor="Black" HorizontalOptions="Center" VerticalOptions="Center"  />
     </Grid>
 </ContentPage>
