--- a/ShoppingApp/ShoppingApp/Surco.xaml
+++ b/ShoppingApp/ShoppingApp/Surco.xaml
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ShoppingApp.Mapa">
+             x:Class="ShoppingApp.Surco"
+             Title="Sede Surco">
     <Grid Padding="10,10,10,0" BackgroundColor="White">
         <Grid.RowDefinitions>
             <RowDefinition Height="40" />
             <RowDefinition Height="190"/>
-            <RowDefinition Height="80"/>
+            <RowDefinition Height="100"/>
             <RowDefinition Height="80"/>
             <RowDefinition Height="220" />
             <RowDefinition Height="*" />
@@ -21,8 +22,9 @@
         <Button Grid.Row="0" Grid.Column="1" Text="Ate" x:Name="btnAte" Clicked="btnAte_Clicked" BackgroundColor="#E5E7E9" CornerRadius="40" TextColor="Black" />
         <Button Grid.Row="0" Grid.Column="2" Text="Miraflores" x:Name="btnMirf" Clicked="btnMirf_Clicked" BackgroundColor="#E5E7E9" CornerRadius="40" TextColor="Black"/>
 
-        <Image Grid.Row="1" Grid.ColumnSpan="3" Source="https://tec.com.pe/wp-content/uploads/2013/11/Google-Maps-Trafico-Lima.jpg" />
-        <Label Grid.Row="2" Grid.ColumnSpan="3" Text="Visítanos en nuestras sedes de Surco, Miraflores y Ate para disfrutar de una experiencia de compra única, variedad de productos y un excelente" FontSize="16" TextColor="Black" />
+        <Image Grid.Row="1" Grid.ColumnSpan="3" Source="https://www.falabella.com.pe/static/site/common/HET/tienda-jockeyPlaza.jpg" />
+        <Label Grid.Row="2" Grid.ColumnSpan="3" Text="En el Distrito de Ate, Saga Falabella se encuentra en Av. Javier Prado Este 4200, el horario de atención es de Lunes A Viernes 10:00 A 18:00, Sábado 10:00 A 13:00, Domingo Cerrado y el teléfono de contacto es el 0116154300
+               " FontSize="16" TextColor="Black" />
 
         <Label Grid.Row="3" Grid.ColumnSpan="3" Text="Sedes" FontSize="26" FontAttributes="Bold" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" TextTransform="Uppercase" TextColor="Black" />
 
@@ -31,20 +33,17 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="190" />
                     <RowDefinition Height="190" />
-                    <RowDefinition Height="190" />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <ImageButton Grid.ColumnSpan="3" Grid.Row="0" Source="https://elcomercio.pe/resizer/0t_aNSeKdyBXTy4EqB-ifENYsoc=/1200x675/smart/filters:format(jpeg):quality(75)/cloudfront-us-east-1.images.arcpublishing.com/elcomercio/KI35ROXGAFGMBDLISBNTXWQCSU.jpg" BackgroundColor="Transparent"/>
-                <Button Grid.ColumnSpan="3" Grid.Row="0" Text="Surco" FontSize="20" Clicked="btnSur_Clicked" HorizontalOptions="Center" CornerRadius="50" TextColor="Black" FontAttributes="Bold" BackgroundColor="LightGreen" Opacity=".8" VerticalOptions="Center" />
 
-                <ImageButton Grid.ColumnSpan="3" Grid.Row="1" Source="https://peruretail.sfo3.cdn.digitaloceanspaces.com/wp-content/uploads/saga-falabella.jpeg" BackgroundColor="Transparent"/>
-                <Button Grid.ColumnSpan="3" Grid.Row="1" Text="Ate" FontSize="20" Clicked="btnAte_Clicked" HorizontalOptions="Center" CornerRadius="50" TextColor="Black" FontAttributes="Bold" BackgroundColor="LightGreen" Opacity=".8" VerticalOptions="Center"/>
+                <ImageButton Grid.ColumnSpan="3" Grid.Row="0" Source="https://peruretail.sfo3.cdn.digitaloceanspaces.com/wp-content/uploads/saga-falabella.jpeg" BackgroundColor="Transparent"/>
+                <Button Grid.ColumnSpan="3" Grid.Row="0" Text="Ate" FontSize="20" Clicked="btnAte_Clicked" HorizontalOptions="Center" CornerRadius="50" TextColor="Black" FontAttributes="Bold" BackgroundColor="LightGreen" Opacity=".8" VerticalOptions="Center"/>
 
-                <ImageButton Grid.ColumnSpan="3" Grid.Row="2" Source="https://peruretail.sfo3.cdn.digitaloceanspaces.com/wp-content/uploads/FALABELLA-puruc-1.jpeg" BackgroundColor="Transparent"/>
-                <Button Grid.ColumnSpan="3" Grid.Row="2" Text="Miraflores"  FontSize="20" Clicked="btnMirf_Clicked" HorizontalOptions="Center" CornerRadius="50" TextColor="Black" FontAttributes="Bold" BackgroundColor="LightGreen" Opacity=".8" VerticalOptions="Center"/>
+                <ImageButton Grid.ColumnSpan="3" Grid.Row="1" Source="https://peruretail.sfo3.cdn.digitaloceanspaces.com/wp-content/uploads/FALABELLA-puruc-1.jpeg" BackgroundColor="Transparent"/>
+                <Button Grid.ColumnSpan="3" Grid.Row="1" Text="Miraflores"  FontSize="20" Clicked="btnMirf_Clicked" HorizontalOptions="Center" CornerRadius="50" TextColor="Black" FontAttributes="Bold" BackgroundColor="LightGreen" Opacity=".8" VerticalOptions="Center"/>
             </Grid>
         </ScrollView>
         <Label  Grid.ColumnSpan="3" Grid.Row="6" Text="CREADOR: KLEIBERT MEDINA" FontSize="12" TextColor="Black" HorizontalOptions="Center" VerticalOptions="Center"  />
