--- a/ShoppingApp/ShoppingApp/Login.xaml
+++ b/ShoppingApp/ShoppingApp/Login.xaml
@@ -13,6 +13,7 @@
             <RowDefinition Height="60"/>
             <RowDefinition Height="60" />
             <RowDefinition Height="60" />
+            <RowDefinition Height="60" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width=".5*"/>
