--- a/ShoppingApp/ShoppingApp/Ate.xaml
+++ b/ShoppingApp/ShoppingApp/Ate.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:maps="clr-namespace:Xamarin.Forms.GoogleMaps;assembly=Xamarin.Forms.GoogleMaps"
              x:Class="ShoppingApp.Ate"
              Title="Sede Ate">
     <Grid Padding="10,10,10,0" BackgroundColor="White">
@@ -18,14 +19,23 @@
             <ColumnDefinition Width=".33*"/>
         </Grid.ColumnDefinitions>
 
-        <Button Grid.Row="0" Grid.Column="0" Text="Surco" x:Name="btnSur" Clicked="btnSur_Clicked" BackgroundColor="#E5E7E9" CornerRadius="40" TextColor="Black" />
-        <Button Grid.Row="0" Grid.Column="1" Text="Ate" x:Name="btnAte" Clicked="btnAte_Clicked" BackgroundColor="#E5E7E9" CornerRadius="40" TextColor="Black" />
-        <Button Grid.Row="0" Grid.Column="2" Text="Miraflores" x:Name="btnMirf" Clicked="btnMirf_Clicked" BackgroundColor="#E5E7E9" CornerRadius="40" TextColor="Black"/>
+        <Button Grid.Row="0" Grid.Column="0" Text="Surco" x:Name="btnSur" Clicked="btnSur_Clicked" BackgroundColor="Transparent" BorderColor="#F2F3F4" BorderWidth="2" CornerRadius="40" TextColor="Black" />
+        <Button Grid.Row="0" Grid.Column="1" Text="Ate" x:Name="btnAte" Clicked="btnAte_Clicked" BackgroundColor="Transparent" BorderColor="#F2F3F4" BorderWidth="2" CornerRadius="40" TextColor="Black" />
+        <Button Grid.Row="0" Grid.Column="2" Text="Miraflores" x:Name="btnMirf" Clicked="btnMirf_Clicked" BackgroundColor="Transparent" BorderColor="#F2F3F4" BorderWidth="2" CornerRadius="40" TextColor="Black"/>
 
 
-        <Image Grid.Row="1" Grid.ColumnSpan="3" Source="https://peruretail.sfo3.cdn.digitaloceanspaces.com/wp-content/uploads/Saga-Falabella-aumento-utilidad-neta-en-Peru.jpg" />
-        <Label Grid.Row="2" Grid.ColumnSpan="3" Text="En el Distrito de Ate, Saga Falabella se encuentra en X359+C3C, Ate 15494, el horario de atención es de Lunes A Viernes 10:00 A 18:00, Sábado 10:00 A 13:00, Domingo Cerrado y el teléfono de contacto es el 0116154300
-               " FontSize="16" TextColor="Black" />
+        
+        <!-- <Image Grid.Row="1" Grid.ColumnSpan="3" Source="https://peruretail.sfo3.cdn.digitaloceanspaces.com/wp-content/uploads/Saga-Falabella-aumento-utilidad-neta-en-Peru.jpg" /> -->
+        <maps:Map x:Name="map" Grid.Row="1" Grid.ColumnSpan="3" />
+        <StackLayout  Grid.Row="2" Grid.ColumnSpan="3" Padding="10" >
+            <Label Text="En el Distrito de Ate, Saga Falabella se encuentra en X359+C3C, Ate 15494.
+               " FontSize="14" TextColor="Black" />
+            <Label Text="Atención es de Lunes A Viernes 10:00 A 18:00, Sábado 10:00 A 13:00, Domingo Cerrado.
+               " FontSize="14" TextColor="Black" />
+            <Label Text="El teléfono de contacto es el 0116154300.
+               " FontSize="14" TextColor="Black" />
+        </StackLayout>
+       
 
         <Label Grid.Row="3" Grid.ColumnSpan="3" Text="Sedes" FontSize="26" FontAttributes="Bold" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" TextTransform="Uppercase" TextColor="Black" />
 
